fixes fields with less than 100% width on mobile

--- a/src/client/components/forms/field-types/Row/index.scss
+++ b/src/client/components/forms/field-types/Row/index.scss
@@ -22,6 +22,7 @@
     > * {
       margin-left: 0;
       margin-right: 0;
+      width: 100% !important;
     }
   }
 }
